--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ os:
   #- osx
 
 smalltalk:
-- Pharo-5.0
-- Pharo-6.0
-- Pharo-7.0
-- Pharo-8.0
+- Pharo32-5.0
+- Pharo32-6.1
+- Pharo64-7.0
+- Pharo64-8.0
