[Doc]: CI Action Comments

--- a/.github/workflows/runTests.yaml
+++ b/.github/workflows/runTests.yaml
@@ -1,3 +1,7 @@
+## Adapted from:
+##    - Roassal3 - https://github.com/ObjectProfile/Roassal3/blob/36b92db2055501c87f2ccea5573fc83fb4916884/.github/workflows/runTests.yml
+##    - Willow-Playground - https://github.com/ba-st/Willow-Playground/blob/2898e1afbdd5a6011721e5a640225f81ae895de2/.github/workflows/build.yml0
+
 name: CI
 
 # Controls when the action will run. 
@@ -36,8 +40,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         timeout-minutes: 15
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v1
-        with:
-          name: ${{matrix.os}}-${{matrix.smalltalk}}
-          token: ${{ secrets.CODECOV_TOKEN }}
+#      - name: Upload coverage to Codecov
+#        uses: codecov/codecov-action@v1
+#        with:
+#          name: ${{matrix.os}}-${{matrix.smalltalk}}
+#          token: ${{ secrets.CODECOV_TOKEN }}
