--- a/.github/workflows/runTests.yaml
+++ b/.github/workflows/runTests.yaml
@@ -24,7 +24,7 @@ jobs:
     
     strategy:
       matrix:
-        smalltalk: [ Pharo64-9.0, Pharo64-8.0, Pharo64-7.0, Pharo32-7.0 ]
+        smalltalk: [ Pharo64-9.0, Pharo64-8.0, Pharo64-7.0, Pharo32-7.0, GemStone64-3.5.x ]
     name: ${{ matrix.smalltalk }}
     
     # Steps represent a sequence of tasks that will be executed as part of the job
